<resources>
    <string name="app_name">Trainspotting</string>
    <string name="departureStationLabel">Lähtöasema</string>
    <string name="destinationStationLabel">Pääteasema</string>
    <string name="mainTitleLabel">Junat</string>
    <string name="departureButton">Lähtö</string>
    <string name="destinationButton">Pääte</string>
    <string name="trainsButton">Hae Junia</string>
    <string name="latestStationLabel">Edellinen asema</string>
    <string name="nextStationLabel">Seuraava asema</string>
    <string name="minuteText">minuuttia</string>
    <string name="departureTime">Lähtee asemalta: </string>
    <string name="destinationTime">Saapuu asemalle: </string>
    <string name="searchTextPlaceholder">Hae asema</string>
    <string name="viiva">-</string>
    <string name="timetable">Aikataulu</string>
</resources>
